# dev-onboarding

./: .gitignore  README.md  python-virtual-environments.md
dev-workflows/: intro-to-git.md  intro-to-notes.md
development-environments/: VSCodium-VSCode-environments.md  multiple-ssh.md  vs-dev.code-profile
images/python-virtual-environments/raw/: 20240626141834.xcf  20240626141945.xcf
python-environments/: pyproject.toml  python-virtual-environments.md
supporting_files/images/python-virtual-environments/raw/: 20240626152533.xcf  20240626152602.xcf  20240626152621.xcf
